fix options after overflow

--- a/src/main/resources/src/components/MainPage/GeneralPage/WorkManagement/WorkManagementPage/WorkManagementPage.scss
+++ b/src/main/resources/src/components/MainPage/GeneralPage/WorkManagement/WorkManagementPage/WorkManagementPage.scss
@@ -153,7 +153,7 @@
       // border-radius: 999px;
       //line
       // top: 22px;
-      bottom: 5px;
+      bottom: 4px;
       left: 5px;
     }
 
